# cppVisa

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
cppVisa/: .gitignore  CMakeLists.txt  EXTENSION_GUIDE.md  README_NIVISA.md
cppVisa/NIVISA/Lib_x64/msc/: nivisa64.lib
cppVisa/NIVISA/agvisa/Lib_x64/msc/: agvisa32.lib  agvisaext.lib  visa32.lib
cppVisa/NIVISA/ktvisa/Lib_x64/msc/: ktvisa32.lib  visaext.lib
cppVisa/NIVISA/ktvisa/lib/msc/: visa32.lib
cppVisa/executable_src/: tests.cpp  tests_advanced.cpp
cppVisa/library_src/: cVisa.cpp  cVisa.h  raw_eth.cpp  raw_eth.h  visa32.lib
gitignore cppVisa/: .gitignore
